Closed Bug 1961165 Opened 1 year ago Closed 1 year ago

Clicked folder: got Uncaught NS_ERROR_UNEXPECTED: Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIMsgDBView.viewIndexForFirstSelectedMsg]

Categories

(Thunderbird :: General, defect)

Thunderbird 138
defect

Tracking

(thunderbird_esr128 wontfix, thunderbird139 affected)

RESOLVED FIXED
140 Branch
Tracking Status
thunderbird_esr128 --- wontfix
thunderbird139 --- affected

People

(Reporter: jd31068, Assigned: mkmelin)

References

Details

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/135.0.0.0 Safari/537.36

Steps to reproduce:

I clicked on a folder

Actual results:

Nothing in Thunderbird changed to indicate that the folder was clicked, here is a screen recording https://1drv.ms/v/c/7b44a6c9bbfcba41/EXgOI2PafXxEgNqDBvLCK0MBCG_8ehBmzfJixN1DDx-9wQ?e=8bBu4T

Closing Thunderbird and launching it fixes it

Expected results:

It should have displayed the contents of the selected folder.

Summary: Thunderbird does not register that anything has been selected NS_Error_Unexpected → Clicked folder: got Uncaught NS_ERROR_UNEXPECTED: Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIMsgDBView.viewIndexForFirstSelectedMsg]

Pretty much happens multiple times a day, just now. I deleted a message from the unified Junk folder. After that, Thunderbird required a restart.
10:20:01.830
Uncaught NS_ERROR_UNEXPECTED: Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIMsgDBView.viewIndexForFirstSelectedMsg]
canMove chrome://messenger/content/mailCommon.js:519
isCommandEnabled chrome://messenger/content/mailCommon.js:689
<anonymous> chrome://messenger/content/about3Pane.js:6334
isCommandEnabled chrome://messenger/content/mailCommon.js:461
getEnabledControllerForCommand chrome://messenger/content/globalOverlay.js:49
goUpdateCommand chrome://messenger/content/globalOverlay.js:79
goUpdateGlobalEditMenuItems chrome://communicator/content/utilityOverlay.js:24
<anonymous> chrome://global/content/editMenuOverlay.js:66
mailCommon.js:519
10:20:01.830
An error occurred updating the cmd_delete command: [Exception... "Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIMsgDBView.viewIndexForFirstSelectedMsg]" nsresult: "0x8000ffff (NS_ERROR_UNEXPECTED)" location: "JS frame :: chrome://messenger/content/mailCommon.js :: canMove :: line 519" data: no] globalOverlay.js:81:13

Duplicate of Bug 1955924 ? 3-Pane breaks (message list and message pane are stuck) when incoming message notification is clicked while having a Quick Filter on

Flags: needinfo?(jd31068)

(In reply to Wayne Mery (:wsmwk) from comment #2)

Duplicate of Bug 1955924 ? 3-Pane breaks (message list and message pane are stuck) when incoming message notification is clicked while having a Quick Filter on

This, or bug 1952311, the symptoms seem to be the same…

See Also: → 1952311, 1955924

Investigating this further, throwing errors for these do not make sense. There are few
c++ callers and the js callers either expect null/nsMsgViewIndex_None or do not handle error at all.

Assignee: nobody → mkmelin+mozilla
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → 140 Branch

Pushed by brendan@thunderbird.net:
https://hg.mozilla.org/comm-central/rev/359868eebc17
Adjust some nsIMsgDBView getters not to throw on no selection. r=edicharry

Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED

This just happened again ... version 139.0b4 (64-bit)
Error console errors text file https://1drv.ms/t/c/7b44a6c9bbfcba41/EaEZcFwNVrhLsxGsRH7MhPYBHXRXXzZw29wkajGLEax2Lg?e=cRWKYE

Status: RESOLVED → REOPENED
Flags: needinfo?(jd31068)
Resolution: FIXED → ---

That's expected. It's only fixed in 140 (currently alpha, will be beta next week).

Status: REOPENED → RESOLVED
Closed: 1 year ago1 year ago
Resolution: --- → FIXED

Ah, my bad. Thank you :-)

Component: Untriaged → General
See Also: → 2039908
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: