Bug 1961165 - Adjust some nsIMsgDBView getters not to throw on no selection. r=edicharry

Investigating this further, throwing errors for these do not make sense. There are few
c++ callers and the js callers either expect null/nsMsgViewIndex_None or do not handle error at all.

Differential Revision: https://phabricator.services.mozilla.com/D250394

--HG--
extra : amend_source : cf3c6c18ffb3a498406de703603e9cec6df47d5f